--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,38 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --primary-color: #972525;
+  --secondary-color: #edb138;
+  --accent-color: #657cbd;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.bg-primary-color {
+  background-color: var(--primary-color);
 }
+
+.bg-secondary-color {
+  background-color: var(--secondary-color);
+}
+
+.bg-accent-color {
+  background-color: var(--accent-color);
+}
+
+.text-primary-color {
+  color: var(--primary-color);
+}
+
+.text-secondary-color {
+  color: var(--secondary-color);
+}
+
+.text-accent-color {
+  color: var(--accent-color);
+}
+
+/* Add more color applications as needed */
